--- a/blake2b_rust/Cargo.toml
+++ b/blake2b_rust/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
+ff = "0.13"
+halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
