--- a/halo_blake2b_primitives/Cargo.toml
+++ b/halo_blake2b_primitives/Cargo.toml
@@ -12,3 +12,9 @@ ff = "0.13"
 halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
 rand = "0.8"
 hex = "0.4.3"
+cfg-if = "1.0.0"
+
+[features]
+default = ["sum_with_4_limbs"]
+sum_with_8_limbs = []
+sum_with_4_limbs = []
