--- a/blake2b_implementation_rust/Cargo.toml
+++ b/blake2b_implementation_rust/Cargo.toml
@@ -3,10 +3,12 @@ name = "blake2b"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "blake2b"
 
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 ff = "0.13"
 halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
+hex = "0.4.3"
