--- a/rust_implementation/Cargo.toml
+++ b/rust_implementation/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "blake2b"
+name = "rust_implementation"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-name = "blake2b"
 
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 ff = "0.13"
-halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
 hex = "0.4.3"
