--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 ff = "0.13"
-halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
+halo2_proofs = { path = "../../halo2" }
 rand = "0.8"
 hex = "0.4.3"
 cfg-if = "1.0.0"
