--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -11,8 +11,14 @@ halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
 rand = "0.8"
 hex = "0.4.3"
 cfg-if = "1.0.0"
+num-bigint = "0.4"
 
 [features]
-default = ["sum_with_4_limbs"]
+default = ["sum_with_4_limbs", "xor_with_table"]
+
 sum_with_8_limbs = []
 sum_with_4_limbs = []
+
+xor_with_table = []
+xor_with_spread = []
+# xor_with_spread requires sum_with_8_limbs
