--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -13,6 +13,13 @@ hex = "0.4.3"
 cfg-if = "1.0.0"
 num-bigint = "0.4"
 
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "benchmark_optimizations"
+harness = false
+
 [features]
 default = ["sum_with_4_limbs", "xor_with_table"]
 
