--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -15,6 +15,7 @@ num-bigint = "0.4"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
+rust_implementation = { path = "../rust_implementation" }
 
 [[bench]]
 name = "benchmark_optimizations"
