Framework for benchmarking proof generation Created Proving Key generation benchmark framekork Added benchmark framework for vk generation

--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -18,7 +18,19 @@ criterion = { version = "0.5.1", features = ["html_reports", "csv_output"] }
 rust_implementation = { path = "../rust_implementation" }
 
 [[bench]]
-name = "benchmark_optimizations"
+name = "mocked_proving"
+harness = false
+
+[[bench]]
+name = "pk_generation"
+harness = false
+
+[[bench]]
+name = "vk_generation"
+harness = false
+
+[[bench]]
+name = "proof_generation"
 harness = false
 
 [features]
