--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -33,6 +33,10 @@ harness = false
 name = "proof_generation"
 harness = false
 
+[[bench]]
+name = "verification"
+harness = false
+
 [features]
 default = [] # No default features to avoid undesired behaviour
 
