--- a/interface/Cargo.toml
+++ b/interface/Cargo.toml
@@ -14,6 +14,7 @@ halo2_proofs = { git = "https://github.com/input-output-hk/halo2", features = ["
 cfg-if = "1.0.0"
 
 [features]
+default = ["opt_spread"]
 opt_4_limbs = []
 opt_recycle = []
 opt_spread  = []
