--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -15,7 +15,7 @@ num-bigint = "0.4"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "csv_output"] }
-# The rust implementation should be an existing implementation
+# [Inigo comment] The rust implementation should be an existing implementation
 rust_implementation = { path = "../rust_implementation" }
 
 [[bench]]
