--- a/interface/Cargo.toml
+++ b/interface/Cargo.toml
@@ -5,13 +5,13 @@ edition = "2021"
 
 [dependencies]
 blake2b_halo2 = { path = "../blake2b_halo2" }
-rust_implementation = { path = "../rust_implementation" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 ff = "0.13"
 hex = "0.4.3"
 halo2_proofs = { git = "https://github.com/input-output-hk/halo2", features = ["cost-estimator"] }
 cfg-if = "1.0.0"
+blake2-rfc = "0.2.18"
 
 [features]
 default = ["opt_spread"]
