Fix: add method generate_row_from_value_and_keep_row to decompose_16

--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -38,7 +38,7 @@ name = "verification"
 harness = false
 
 [features]
-default = ["opt_spread"]
+default = ["opt_4_limbs"]
 opt_4_limbs = []
 opt_recycle = []
 opt_spread  = []
