Remove Xor spread
Change input types of xor operation AssignedBlake2bWord. (not the result because we have to implement the row concept)

--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -38,7 +38,6 @@ name = "verification"
 harness = false
 
 [features]
-default = ["opt_spread"]
+default = ["opt_recycle"]
 opt_4_limbs = []
 opt_recycle = []
-opt_spread  = []
