--- a/blake2b_halo2/Cargo.toml
+++ b/blake2b_halo2/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 ff = "0.13"
-halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
+halo2_proofs = { git = "https://github.com/input-output-hk/halo2" , features = ["cost-estimator"]}
 rand = "0.8"
 hex = "0.4.3"
 num-bigint = "0.4"
@@ -15,6 +15,9 @@ num-bigint = "0.4"
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "csv_output"] }
 blake2-rfc = "0.2.18"
+
+[profile.bench]
+lto = "fat"
 
 [[bench]]
 name = "mocked_proving"
