--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 ff = "0.13"
-halo2_proofs = { git = "https://github.com/input-output-hk/halo2" , features = ["cost-estimator"]}
+#halo2_proofs = { git = "https://github.com/input-output-hk/halo2" , features = ["cost-estimator"]}
+midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk", version = "0.4.0", default-features = false, features = [
+    "bits",
+    "cost-estimator",
+    "committed-instances",
+] }
 rand = "0.8"
 hex = "0.4.3"
 num-bigint = "0.4"
